--- a/order_page/order_page.html
+++ b/order_page/order_page.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Burger Hut</title>
+
     <link rel="stylesheet" href="./../global.css" type="text/css" />
     <link rel="stylesheet" href="./order_page.css" type="text/css" />
-    <script src="./../global.js" async></script>
+
     <script src="./order_script.js" defer></script>
-    <title>Burger Hut</title>
+    <script src="./../components/navbar.js" defer></script>
+    <script src="./../components/footer.js" defer></script>
   </head>
   
   <body>
@@ -16,17 +19,8 @@
       <button class="cart-btn primary-gradiant round">
         <img src="./../assets/icons/cart.png" alt="">
       </button>
-      <nav>
-        <img class="logo" src="./../assets/logo.png" alt="" />
-        <div>
-          <a href="">About Us</a>
-          <a href="">Order</a>
-          <a href="">Contact Us</a>
-        </div>
-        <button onClick="">
-          <img class="hamburger" src="./../assets/icons/hamburger.png" alt="" />
-        </button>
-      </nav>
+      
+      <navbar-component></navbar-component>
 
       <section class="offer">
         <div>
@@ -138,42 +132,7 @@
         </div>
       </section>
 
-      <footer>
-        <div class="wrapper">
-          <ul class="contact">
-            <h3>Contact</h3>
-            <li><img src="./../assets/icons/phone.png" alt="">
-              loremipsum@gmail.com</li>
-            <li><img src="./../assets/icons/message.png" alt="">+(961) 55 555 555
-              (Dekwaneh)</li>
-            <li><img src="./../assets/icons/message.png" alt="">+(961) 55 555 555
-              (Achrafieh)</li>
-            <li><img src="./../assets/icons/message.png" alt="">+(961) 55 555 555
-              (Antelias)</li>
-            <li><img src="./../assets/icons/message.png" alt="">+(961) 55 555 555
-              (Sin
-              El
-              Fil)</li>
-          </ul>
-
-          <div class="social-media">
-            <h3>Follow Us</h3>
-            <div>
-              <a href="#"><img src="./../assets/icons/facebook.png" alt=""></a>
-              <a href="#"><img src="./../assets/icons/twitter.png" alt=""></a>
-              <a href="#"><img src="./../assets/icons/instagram.png" alt=""></a>
-            </div>
-          </div>
-
-          <div class="stay-updated">
-            <h3>Want to stay updated with our latest offer ?</h3>
-            <input type="email" placeholder="Enter your email">
-            <input class="type1" type="submit" value="Sign Up">
-          </div>
-        </div>
-
-        <div class="copyright">© 2023 Kevin Slim. All Rights Reserved.</div>
-      </footer>
+      <footer-component></footer-component>
     </div>
   </body>
 </html>
