Edit Account Details page added

--- a/sign_in_page/sign_in_page.html
+++ b/sign_in_page/sign_in_page.html
@@ -7,14 +7,14 @@
     <title>Burger Hut</title>
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
-    <link rel="stylesheet" href="./sign_in_page.css" type="text/css" />
+    <link rel="stylesheet" href="./sign_in_style.css" type="text/css" />
 
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
   </head>
 
   <body>
-    <div class="layout">
+    <div id="layout">
       <navbar-component></navbar-component>
 
       <section>
