--- a/order_page/order_page.html
+++ b/order_page/order_page.html
@@ -7,7 +7,7 @@
     <title>Burger Hut</title>
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
-    <link rel="stylesheet" href="./order_page.css" type="text/css" />
+    <link rel="stylesheet" href="./order_style.css" type="text/css" />
 
     <script src="./order_script.js" defer></script>
     <script src="./../components/navbar.js" defer></script>
@@ -19,7 +19,7 @@
       <button class="cart-btn primary-gradiant round">
         <img src="./../assets/icons/cart.png" alt="">
       </button>
-      
+
       <navbar-component></navbar-component>
 
       <section class="offer">
