small refactoring and adjustements

--- a/order_page/order_page.html
+++ b/order_page/order_page.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./../global.css" type="text/css" />
     <link rel="stylesheet" href="./order_style.css" type="text/css" />
 
+    <script src="./../global.js" defer></script>
     <script src="./order_script.js" defer></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
@@ -76,58 +77,59 @@
               <h3>Hamburger</h3>
               <h4>$4.99</h4>
             </div>
-            <button class="add"><img src="./../assets/icons/add_to_cart.png"></button>
+            <button class="add"><img src="./../assets/icons/add.png"></button>
           </div>
 
-          <div class="food-card">
+          <div class="food-card" onclick="showFoodDetail()">
             <img class="picture" src="./../assets/computer/demo_burger.png"
               alt="Burger">
             <div class="content">
               <h3>Hamburger</h3>
               <h4>$4.99</h4>
             </div>
-            <button class="add"><img src="./../assets/icons/add_to_cart.png"></button>
+            <button class="add"><img src="./../assets/icons/add.png"></button>
           </div>
 
-          <div class="food-card">
+          <div class="food-card" onclick="showFoodDetail()">
             <img class="picture" src="./../assets/computer/demo_burger.png"
               alt="Burger">
             <div class="content">
               <h3>Hamburger</h3>
               <h4>$4.99</h4>
             </div>
-            <button class="add"><img src="./../assets/icons/add_to_cart.png"></button>
+            <button class="add"><img src="./../assets/icons/add.png"></button>
           </div>
 
-          <div class="food-card">
+          <div class="food-card" onclick="showFoodDetail()">
             <img class="picture" src="./../assets/computer/demo_burger.png"
               alt="Burger">
             <div class="content">
               <h3>Hamburger</h3>
               <h4>$4.99</h4>
             </div>
-            <button class="add"><img src="./../assets/icons/add_to_cart.png"></button>
+            <button class="add"><img src="./../assets/icons/add.png"></button>
           </div>
 
-          <div class="food-card">
+          <div class="food-card" onclick="showFoodDetail()">
             <img class="picture" src="./../assets/computer/demo_burger.png"
               alt="Burger">
             <div class="content">
               <h3>Hamburger</h3>
               <h4>$4.99</h4>
             </div>
-            <button class="add"><img src="./../assets/icons/add_to_cart.png"></button>
+            <button class="add"><img src="./../assets/icons/add.png"></button>
           </div>
 
-          <div class="food-card">
+          <div class="food-card" onclick="showFoodDetail()">
             <img class="picture" src="./../assets/computer/demo_burger.png"
               alt="Burger">
             <div class="content">
               <h3>Hamburger</h3>
               <h4>$4.99</h4>
             </div>
-            <button class="add"><img src="./../assets/icons/add_to_cart.png"></button>
+            <button class="add"><img src="./../assets/icons/add.png"></button>
           </div>
+
 
         </div>
       </section>
