--- a/settings_page/settings_page.html
+++ b/settings_page/settings_page.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
     <link rel="stylesheet" href="./settings_style.css" type="text/css" />
+
+    <script src="./../global.js" defer></script>
     <script src="./date_of_birth.js" defer></script>
     <script src="./country_code.js" defer></script>
     <script src="./../components/navbar.js" defer></script>
@@ -143,6 +145,11 @@
             </p>
             <button class="delete"></button>
             <button class="edit"></button>
+          </div>
+
+          <div class="btn-container">
+            <button class="add"></button>
+            <span>Add New Address</span>
           </div>
         </div>
       </section>
