--- a/sign_in_page/sign_in_page.html
+++ b/sign_in_page/sign_in_page.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./../global.css" type="text/css" />
     <link rel="stylesheet" href="./sign_in_style.css" type="text/css" />
 
+    <script src="./../global.js" defer></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
   </head>
