Contact page added and made Order Page items automated with JS

--- a/order_page/order_page.html
+++ b/order_page/order_page.html
@@ -14,11 +14,11 @@
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
   </head>
-  
+
   <body>
     <div id="layout" class="layout">
       <button class="cart-btn primary-gradiant round">
-        <img src="./../assets/icons/cart.png" alt="">
+        <img src="./../assets/icons/cart.png" alt="" />
       </button>
 
       <navbar-component></navbar-component>
@@ -31,13 +31,13 @@
         <button>Order Now</button>
         <img
           srcset="
-          ./../assets/mobile/burger.png 300w,
-          ./../assets/computer/burger.png 1330w
+            ./../assets/mobile/burger.png    300w,
+            ./../assets/computer/burger.png 1330w
           "
           sizes="(max-width: 600px) 300px, 1330px"
           alt="burger offer"
           src="./../assets/computer/burger.png"
-          />
+        />
       </section>
 
       <section class="selectors">
@@ -68,69 +68,9 @@
       </section>
 
       <section class="food-list">
-        <div class="layout">
-
-          <div class="food-card" onclick="showFoodDetail()">
-            <img class="picture" src="./../assets/computer/demo_burger.png"
-              alt="Burger">
-            <div class="content">
-              <h3>Hamburger</h3>
-              <h4>$4.99</h4>
-            </div>
-            <button class="add"><img src="./../assets/icons/add.png"></button>
-          </div>
-
-          <div class="food-card" onclick="showFoodDetail()">
-            <img class="picture" src="./../assets/computer/demo_burger.png"
-              alt="Burger">
-            <div class="content">
-              <h3>Hamburger</h3>
-              <h4>$4.99</h4>
-            </div>
-            <button class="add"><img src="./../assets/icons/add.png"></button>
-          </div>
-
-          <div class="food-card" onclick="showFoodDetail()">
-            <img class="picture" src="./../assets/computer/demo_burger.png"
-              alt="Burger">
-            <div class="content">
-              <h3>Hamburger</h3>
-              <h4>$4.99</h4>
-            </div>
-            <button class="add"><img src="./../assets/icons/add.png"></button>
-          </div>
-
-          <div class="food-card" onclick="showFoodDetail()">
-            <img class="picture" src="./../assets/computer/demo_burger.png"
-              alt="Burger">
-            <div class="content">
-              <h3>Hamburger</h3>
-              <h4>$4.99</h4>
-            </div>
-            <button class="add"><img src="./../assets/icons/add.png"></button>
-          </div>
-
-          <div class="food-card" onclick="showFoodDetail()">
-            <img class="picture" src="./../assets/computer/demo_burger.png"
-              alt="Burger">
-            <div class="content">
-              <h3>Hamburger</h3>
-              <h4>$4.99</h4>
-            </div>
-            <button class="add"><img src="./../assets/icons/add.png"></button>
-          </div>
-
-          <div class="food-card" onclick="showFoodDetail()">
-            <img class="picture" src="./../assets/computer/demo_burger.png"
-              alt="Burger">
-            <div class="content">
-              <h3>Hamburger</h3>
-              <h4>$4.99</h4>
-            </div>
-            <button class="add"><img src="./../assets/icons/add.png"></button>
-          </div>
-
-
+        <div id='food-list' class="layout">
+          
+         
         </div>
       </section>
 
