added navbar link destinations and make small adjustments

--- a/order_page/order_page.html
+++ b/order_page/order_page.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./order_style.css" type="text/css" />
 
     <script src="./../global.js" defer></script>
+    <script src="./welcome_script.js" defer></script>
     <script src="./order_script.js" defer></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
@@ -22,6 +23,8 @@
       </button>
 
       <navbar-component></navbar-component>
+
+      <section class="welcome"></section>
 
       <section class="offer">
         <div>
@@ -68,10 +71,7 @@
       </section>
 
       <section class="food-list">
-        <div id='food-list' class="layout">
-          
-         
-        </div>
+        <div id="food-list" class="layout"></div>
       </section>
 
       <footer-component></footer-component>
