--- a/settings_page/settings_page.html
+++ b/settings_page/settings_page.html
@@ -22,7 +22,7 @@
       <navbar-component></navbar-component>
 
       <main class="sm">
-        <form class="account-details left-decoration">
+        <form id="account-details" class="account-details left-decoration">
           <h2>Edit Account Details</h2>
           <div class="input-box">
             <input
@@ -90,7 +90,7 @@
 
         <hr />
 
-        <section class="address-book left-decoration">
+        <section id="address-book" class="address-book left-decoration">
           <p class="title margin">Here all all of your addresses</p>
 
           <div class="address-list">
