Home Page Prototype

--- a/contact_page/contact_page.html
+++ b/contact_page/contact_page.html
@@ -31,8 +31,11 @@
           <select name="type" id="type">
             <option disabled selected>Select Message Type</option>
             <option value="book-reservation">Book Reservation</option>
+            <option value="birthday-reservation">Birthday Reservation</option>
+            <option value="job-application">Job Application</option>
             <option value="technical-support">Technical Support</option>
             <option value="formal-complaint">Formal Complaint</option>
+
           </select>
 
           <div class="input-box">
