Updated Home Page

--- a/home_page/home_page.html
+++ b/home_page/home_page.html
@@ -23,55 +23,34 @@
         <button class="slide-arrow" id="slide-arrow-prev">&#8249;</button>
         <button class="slide-arrow" id="slide-arrow-next">&#8250;</button>
         <ul class="slides-container" id="slides-container">
-          <li class="slide">
+          <li class="slide new-food">
             <img src="./../assets/home/carousel/1.jpg" alt="BBQ Pizza" />
             <div class="content">
+              <span>New</span>
               <h2>BBQ Chicken Pizza</h2>
               <p>
                 This BBQ chicken pizza has spicy barbecue sauce, diced chicken,
                 peppers, onion, and cilantro, all covered with cheese and baked
                 to bubbly goodness!
               </p>
-              <a href="./../order_page/order_page.html" class="type1">Order Now</a>
-            </div>
-          </li>
-          
-          <li class="slide">
-            <img src="./../assets/home/carousel/1.jpg" alt="BBQ Pizza" />
-            <div class="content">
-              <h2>BBQ Chicken Pizza</h2>
-              <p>
-                This BBQ chicken pizza has spicy barbecue sauce, diced chicken,
-                peppers, onion, and cilantro, all covered with cheese and baked
-                to bubbly goodness!
-              </p>
-              <a href="./../order_page/order_page.html" class="type1">Order Now</a>
+              <a href="./../order_page/order_page.html" class="type1"
+                >Order Now</a
+              >
             </div>
           </li>
 
-          <li class="slide">
-            <img src="./../assets/home/carousel/1.jpg" alt="BBQ Pizza" />
+          <li class="slide new-food">
+            <img src="./../assets/home/carousel/2.jpeg" alt="BBQ Pizza" />
             <div class="content">
-              <h2>BBQ Chicken Pizza</h2>
+              <span>New</span>
+              <h2>Crispy Fried Chicken</h2>
               <p>
-                This BBQ chicken pizza has spicy barbecue sauce, diced chicken,
-                peppers, onion, and cilantro, all covered with cheese and baked
-                to bubbly goodness!
+                This bucket of crispy fried chicken goodness comes with barbecue
+                sauce, and can be shared with the whole family!
               </p>
-              <a href="./../order_page/order_page.html" class="type1">Order Now</a>
-            </div>
-          </li>
-
-          <li class="slide">
-            <img src="./../assets/home/carousel/1.jpg" alt="BBQ Pizza" />
-            <div class="content">
-              <h2>BBQ Chicken Pizza</h2>
-              <p>
-                This BBQ chicken pizza has spicy barbecue sauce, diced chicken,
-                peppers, onion, and cilantro, all covered with cheese and baked
-                to bubbly goodness!
-              </p>
-              <a href="./../order_page/order_page.html" class="type1">Order Now</a>
+              <a href="./../order_page/order_page.html" class="type1"
+                >Order Now</a
+              >
             </div>
           </li>
         </ul>
@@ -107,6 +86,14 @@
             <button><img src="./../assets/home/play_store.png" /></button>
           </div>
         </div>
+      </section>
+
+      <section class="hiring">
+        <h2>Looking for a work opportunity ?</h2>
+        <p>
+          Send your us your CV, and we'll get back to you as soon as possible!
+        </p>
+        <a class="type1" href="./../contact_page/contact_page.html">Apply Now</a>
       </section>
 
       <footer-component></footer-component>
