Registration Page Added and Fixed Login and Settings Page

--- a/settings_page/settings_page.html
+++ b/settings_page/settings_page.html
@@ -7,12 +7,12 @@
     <title>Burger Hut</title>
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
+    <link rel="stylesheet" href="./../components/account_form/form.css" type="text/css" />
     <link rel="stylesheet" href="./settings_style.css" type="text/css" />
 
-    <script src="./../global.js" defer></script>
-    <script src="./settings.js"></script>
-    <script src="./date_of_birth.js" defer></script>
-    <script src="./country_code.js" defer></script>
+    <script src="./settings.js" defer></script>
+    <script src="./../components/account_form/country_code.js" defer></script>
+    <script src="./../components/account_form/date_of_birth.js" defer></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
   </head>
@@ -22,28 +22,30 @@
       <navbar-component></navbar-component>
 
       <main class="sm">
-        <form id="account-details" class="account-details left-decoration">
+        <form id="account-details" class="account-form left-decoration">
           <h2>Edit Account Details</h2>
-          <div class="input-box">
-            <input
-              class="style1"
-              type="text"
-              name="first-name"
-              id="first-name"
-              placeholder=" "
-            />
-            <span>First Name</span>
-          </div>
+          <div class="double-field">
+            <div class="input-box">
+              <input
+                class="style1"
+                type="text"
+                name="firstName"
+                id="firstName"
+                placeholder=" "
+              />
+              <span>First Name</span>
+            </div>
 
-          <div class="input-box">
-            <input
-              class="style1"
-              type="text"
-              name="last-name"
-              id="last-name"
-              placeholder=" "
-            />
-            <span>Last Name</span>
+            <div class="input-box">
+              <input
+                class="style1"
+                type="text"
+                name="lastName"
+                id="lastName"
+                placeholder=" "
+              />
+              <span>Last Name</span>
+            </div>
           </div>
 
           <div>
