--- a/sign_in_page/sign_in_page.html
+++ b/sign_in_page/sign_in_page.html
@@ -7,9 +7,12 @@
     <title>Burger Hut</title>
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
+    <link rel="stylesheet" href="./../components/account_form/form.css" type="text/css" />
     <link rel="stylesheet" href="./sign_in_style.css" type="text/css" />
 
     <script src="./../global.js" defer></script>
+    <script src="./form_selection.js" defer></script>
+    <script src="./connection_script.js" defer></script>
     <script src="./../components/navbar.js" defer></script>
     <script src="./../components/footer.js" defer></script>
   </head>
@@ -18,26 +21,41 @@
     <div id="layout">
       <navbar-component></navbar-component>
 
-      <section>
+      <section class="auth">
         <h2>You can start ordering now</h2>
-        <form>
-          <input type="email" name="email" id="email" placeholder="Email">
-          <input type="password" name="password" id="password"
-            placeholder="Password">
-          <div class="remember-me">
-            <input type="checkbox" name="remember-me" id="remember-me"
-              value="remember-me">
-            <label for="remember-me">Remember me</label>
+        <div class="buttons">
+          <a href="./sign_in_page.html" class="selected">Sign In</a>
+          <a href="./sign_up_page.html">Sign Up</a>
+        </div>
+
+        <form class="account-form" name="login" onsubmit="authenticateUser(event)">
+          <div class="input-box">
+            <input
+              class="style1"
+              type="email"
+              name="email"
+              id="email"
+              placeholder=" "
+              required
+            />
+            <span>Email</span>
+          </div>
+
+          <div class="input-box">
+            <input
+              class="style1"
+              type="password"
+              name="password"
+              id="password"
+              placeholder=" "
+              required
+            />
+            <span>Password</span>
           </div>
 
           <div class="container">
-            <input class="type1 full" type="submit" value="Sign In">
+            <input type="submit" class="type1 full" value="Sign In" />
             <a href="#" class="small forgot-password">Forgot Password ?</a>
-          </div>
-          <hr>
-          <div class="container">
-            <a href="#" class="small first-time">Is this your first time here ?</a>
-            <a href="#" class="type1 full">Register Now</a>
           </div>
         </form>
       </section>
