--- a/sign_in_page/sign_in_page.html
+++ b/sign_in_page/sign_in_page.html
@@ -7,7 +7,11 @@
     <title>Burger Hut</title>
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
-    <link rel="stylesheet" href="./../components/account_form/form.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="./../components/account_form/form.css"
+      type="text/css"
+    />
     <link rel="stylesheet" href="./sign_in_style.css" type="text/css" />
 
     <script src="./connection_script.js" defer></script>
@@ -26,7 +30,11 @@
           <a href="./sign_up_page.html">Sign Up</a>
         </div>
 
-        <form class="account-form" name="login" onsubmit="authenticateUser(event)">
+        <form
+          class="account-form"
+          name="login"
+          onsubmit="authenticateUser(event)"
+        >
           <div class="input-box">
             <input
               class="style1"
@@ -51,10 +59,17 @@
             <span>Password</span>
           </div>
 
+          <div class="remember-me">
+            <input type="checkbox" name="rememberMe" value="true" id="rememberMe">
+            <p>Remember me</p>
+          </div>
+
           <div class="container">
             <input type="submit" class="type1 full" value="Sign In" />
             <a href="#" class="small forgot-password">Forgot Password ?</a>
           </div>
+          
+          <div id="message" class="message"></div>
         </form>
       </section>
 
