ingredients can now be retrieved and shown

--- a/order_page/order_page.html
+++ b/order_page/order_page.html
@@ -15,7 +15,7 @@
     <script src="./../components/footer.js" defer></script>
   </head>
 
-  <body onload="getCategoryItems('Chicken')">
+  <body onload="getCategoryItems('Beef')">
     <div id="layout" class="layout">
       <button class="cart-btn primary-gradiant round">
         <img src="./../assets/icons/cart.png" alt="" />
@@ -60,12 +60,13 @@
       </section>
 
       <section id="category-list" class="category-list">
-        <button>Chicken</button>
         <button>Beef</button>
+        <button>Chicken</button>
+        <button>Fish</button>
         <button>Pizza</button>
         <button>Salad</button>
+        <button>Side</button>
         <button>Sandwish</button>
-        <button>Dessert</button>
         <button>Drink</button>
       </section>
 
