Cart fully functional

--- a/order_page/order_page.html
+++ b/order_page/order_page.html
@@ -17,9 +17,9 @@
 
   <body onload="getCategoryItems('Beef')">
     <div id="layout" class="layout">
-      <button class="cart-btn primary-gradiant round">
+      <a href="./../cart_page/cart_page.html" class="cart-btn primary-gradiant round">
         <img src="./../assets/icons/cart.png" alt="" />
-      </button>
+      </a>
 
       <navbar-component></navbar-component>
 
