--- a/profile_page/profile_page.html
+++ b/profile_page/profile_page.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Burger Hut</title>
+    <title>Burger Hut | Profile</title>
 
     <link rel="stylesheet" href="./../global.css" type="text/css" />
     <link rel="stylesheet" href="./../components/account_form/form.css" type="text/css" />
-    <link rel="stylesheet" href="./settings_style.css" type="text/css" />
+    <link rel="stylesheet" href="./profile.css" type="text/css" />
 
-    <script src="./settings.js" defer></script>
+    <script src="./profile.js" defer></script>
     <script src="./../components/account_form/country_code.js" defer></script>
     <script src="./../components/account_form/date_of_birth.js" defer></script>
     <script src="./../components/navbar.js" defer></script>
